# serializer version: 1
# name: test_embed_preserves_existing_speakers
  list([
    dict({
      'speaker_name': 'Alice',
      'text': 'The birch canoe slid on the smooth planks.',
    }),
    dict({
      'speaker_name': 'Unknown Speaker 00?',
      'text': 'Glue the sheet to the dark blue background.',
    }),
    dict({
      'speaker_name': 'Bob',
      'text': 'The juice of lemons makes fine punch.',
    }),
    dict({
      'speaker_name': 'Unknown Speaker 01?',
      'text': 'A large size of stockings is hard to sell.',
    }),
  ])
# ---
# name: test_embed_with_clustering
  list([
    dict({
      'speaker_name': 'Unknown Speaker 01?',
      'text': 'The birch canoe slid on the smooth planks.',
    }),
    dict({
      'speaker_name': 'Unknown Speaker 00?',
      'text': 'Glue the sheet to the dark blue background.',
    }),
    dict({
      'speaker_name': 'Unknown Speaker 00?',
      'text': 'The juice of lemons makes fine punch.',
    }),
    dict({
      'speaker_name': 'Unknown Speaker 01?',
      'text': 'A large size of stockings is hard to sell.',
    }),
  ])
# ---
